fix sass syntax for dark mode

--- a/ui/src/styles.sass
+++ b/ui/src/styles.sass
@@ -1,4 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
-@media(prefers-color-scheme: dark){html{filter:invert(1) hue-rotate(180deg)};}
+
+@media(prefers-color-scheme: dark)
+    html 
+        filter: invert(1) hue-rotate(180deg)
+
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap'
